test: updated the failing tests after the insights response was changed
- after the insights was changed to personal insights and team insights, some tetsts started failing